--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -6,4 +6,4 @@ do.jar=true
 endorsed.javafx.ant.classpath=.
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/home/icaro/.netbeans/8.2/build.properties
+user.properties.file=/home/dayana/.netbeans/8.2/build.properties
