--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,14 +29,14 @@ dist.jar=${dist.dir}/NarcoticsBurning.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.hsqldb.jar=/home/icaro/hsqldb.jar
+file.reference.hsqldb.jar-1=lib/hsqldb.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.hsqldb.jar}
+    ${file.reference.hsqldb.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
