--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "crud-backend",
   "version": "1.0.1",
   "description": "simple backend server",
-  "main": "entry.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "bower": "^1.8.4",
     "cors": "^2.8.4",
     "express": "^4.16.4",
     "mongoose": "^5.3.1"
