--- a/angular-drakon/angular.json
+++ b/angular-drakon/angular.json
@@ -23,11 +23,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "./node_modules/jquery/dist/jquery.min.js"
+              "src/styles.css"
             ],
-            "scripts": []
+            "scripts": ["./node_modules/jquery/dist/jquery.min.js","./node_modules/jquery/dist/jquery.dataTables.min.js","./node_modules/jquery/dist/dataTables.bootstrap4.min.js"]
           },
           "configurations": {
             "production": {
